--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -1,78 +1,40 @@
 ﻿@page
 @model PPTT.Pages.Administradores.IndexPPTT
+@using X.PagedList.Mvc.Core
+@using X.PagedList
+
 <body>
     <div class="header-index-pt">
         <a asp-page="./Finalizados" class="btn-header-pt">Trabajos Finalizados</a>
-        @{/*<div>
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-            <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-            <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
-            <script>
-                document.addEventListener("DOMContentLoaded", function () {
-                    flatpickr("#fechaInicio", {
-                        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
-                        locale: "es", // Establecer el idioma a español
-                    });
-                    flatpickr("#fechaFin", {
-                        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
-                        locale: "es", // Establecer el idioma a español
-                    });
-                });
-            </script>
-            <form method="get">
-                <label for="fechaInicio">Fecha Inicio:</label>
-                <input type="text" id="fechaInicio" name="fechaInicio" required />
-
-                <label for="fechaFin">Fecha Fin:</label>
-                <input type="text" id="fechaFin" name="fechaFin" required />
-
-                <button type="button" id="filtrar" class="filtrar">Filtrar</button>
-            </form>
-    </div>*/}
         <button id="btnExportar" class="btnExportar">Exportar Excel</button>
     </div>
-<table class="table" id="tabla">
-    <thead>
-        <tr>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Orden_Fk)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Fecha_Subida)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Grado_Fk)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Apellido_Solicitante)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Organismo_Fk)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].RTI_Solicitante)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Numero_Oficina_PT)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Correo)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Division_Fk)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Tarea_Fk)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)</th>
-            <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Prioridad_Fk)</th>
-            <th><span>Personal Asignado</span></th>
-            <th>Detalle/Estado</th>
-            <th><span</span></th>
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            var divisionUsuario = HttpContext.Session.GetInt32("Division");
-        }
 
-        @foreach (var item in Model.PedidoTrabajo)
-        {
-            if (item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006)
+    <table class="table" id="tabla">
+        <thead>
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Orden_Fk)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Fecha_Subida)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Grado_Fk)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Apellido_Solicitante)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Organismo_Fk)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].RTI_Solicitante)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Numero_Oficina_PT)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Correo)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Division_Fk)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Tarea_Fk)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)</th>
+                <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Prioridad_Fk)</th>
+                <th>Personal Asignado</th>
+                <th>Detalle/Estado</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.PedidoTrabajo)
             {
-                <tr data-fecha="@item.Fecha_Subida?.ToString("yyyy-MM-dd") ?? " 0001-01-01"">
+                <tr>
                     <td>@Html.DisplayFor(modelItem => item.ID_Orden_Fk)</td>
-                    <td>
-                        @if (item.Fecha_Subida.HasValue)
-                        {
-                            @item.Fecha_Subida.Value.ToString("dd-MM-yyyy")
-                        }
-                        else
-                        {
-                            @:01-01-0001
-                        }
-                    </td>
+                    <td>@(item.Fecha_Subida?.ToString("dd-MM-yyyy") ?? "01-01-0001")</td>
                     <td>@Html.DisplayFor(modelItem => item.Grado.Descripcion_Grado)</td>
                     <td>@Html.DisplayFor(modelItem => item.Apellido_Solicitante)</td>
                     <td>@Html.DisplayFor(modelItem => item.Organismo.Descripcion_organismo)</td>
@@ -80,63 +42,23 @@
                     <td>@Html.DisplayFor(modelItem => item.Numero_Oficina_PT)</td>
                     <td>@Html.DisplayFor(modelItem => item.Correo)</td>
                     <td>@Html.DisplayFor(modelItem => item.Division.Descripcion_Division)</td>
-                    <td>
-                        @Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ?
-                                 item.Tarea.Descripcion_Tarea.Substring(0) :
-                                 item.Tarea.Descripcion_Tarea)
-                    </td>
+                    <td>@Html.DisplayFor(modelItem => item.Tarea.Descripcion_Tarea)</td>
                     <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
                     <td>@Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)</td>
-                    <td data-orden-trabajo-id="@item.ID_Orden_Trabajo_Pk">
-                        <div class="form-group">
-                            <select asp-for="PT.ID_Prioridad_Fk"
-                                    asp-items="@(new SelectList(Model.Prioridad, "ID_Prioridad_Pk", "Descripcion_Prioridad"))"
-                                    class="PrioridadSelect formControl">
-                                <option hidden selected value="">@item.Prioridad.Descripcion_Prioridad</option>
-                            </select>
-                            <span asp-validation-for="PT.ID_Prioridad_Fk" class="text-danger"></span>
-                        </div>
-                    </td>
-                    <td>
-                        <span id="personalAsignado_@item.ID_Orden_Trabajo_Pk" data-orden-id="@item.ID_Orden_Trabajo_Pk">
-                            Personal asignado
-                        </span>
-                    </td>
-                    <td>
-                            <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">
-                                Ir a Detalle
-                            </a>
-                    </td>
-                    <td>
-                        <div class="form-group">
-                                <select hidden id="usuarioSelect_@item.ID_Orden_Trabajo_Pk" class="formControl" data-division-id="@item.ID_Division_Fk">
-                                <option hidden selected value="" >Selecciona un usuario</option>
-                            </select>
-                        </div>
-                    </td>
+                    <td>@Html.DisplayFor(modelItem => item.Prioridad.Descripcion_Prioridad)</td>
+                    <td>Personal asignado</td>
+                    <td><a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Ir a Detalle</a></td>
                 </tr>
             }
+        </tbody>
+    </table>
 
-        }        
-    </tbody>
-</table>
-<div class="pagination">
-    @if (Model.PedidoTrabajo.HasPreviousPage)
-    {
-        <a asp-page="./Index" asp-route-pageIndex="@(Model.PedidoTrabajo.PageIndex - 1)" class="pag">Anterior</a>
-    }
-
-    @for (int i = 1; i <= Model.PedidoTrabajo.TotalPages; i++)
-    {
-        <a asp-page="./Index" asp-route-pageIndex="@i" class="pag">@i</a>
-    }
-
-    @if (Model.PedidoTrabajo.HasNextPage)
-    {
-        <a asp-page="./Index" asp-route-pageIndex="@(Model.PedidoTrabajo.PageIndex + 1)" class="pag">Siguiente</a>
-    }
-</div>
+    <!-- Paginación usando PagedListPager -->
+    <div>
+        @Html.PagedListPager(Model.PedidoTrabajo, page => Url.Page("./Index", new { pageNumber = page }), PagedListRenderOptions.Classic)
+    </div>
 </body>
+
 <script>
     function formatDateInput(input) {
         let value = input.value.replace(/[^0-9]/g, ''); // Eliminar caracteres no numéricos
