--- a/PPTT/Pages/PT/IndexAdmin.cshtml
+++ b/PPTT/Pages/PT/IndexAdmin.cshtml
@@ -1,40 +1,18 @@
 ﻿@page
 @model PPTT.Pages.Administradores.IndexAdminPTPPTT
+@using X.PagedList.Mvc.Core
+@using X.PagedList
 
 @{
     ViewData["Title"] = "Pedidos de trabajo";
 }
+
 <body>
     <div class="header-index-pt">
         <a asp-page="./FinalizadosAdmin" class="btn-header-pt">Trabajos Finalizados</a>
-        @{/*<div>
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-            <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-            <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> <!-- Cargar idioma español -->
-            <script>
-                document.addEventListener("DOMContentLoaded", function () {
-                    flatpickr("#fechaInicio", {
-                        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
-                        locale: "es", // Establecer el idioma a español
-                    });
-                    flatpickr("#fechaFin", {
-                        dateFormat: "d-m-Y", // Formato dd-mm-yyyy
-                        locale: "es", // Establecer el idioma a español
-                    });
-                });
-            </script>
-            <form method="get">
-                <label for="fechaInicio">Fecha Inicio:</label>
-                <input type="text" id="fechaInicio" name="fechaInicio" required />
-
-                <label for="fechaFin">Fecha Fin:</label>
-                <input type="text" id="fechaFin" name="fechaFin" required />
-
-                <button type="button" id="filtrar" class="filtrar">Filtrar</button>
-            </form>
-        </div> */}<!-- FILTRAR POR FECHA -->
         <button id="btnExportar" class="btnExportar">Exportar Excel</button>
     </div>
+
     <table class="table" id="tabla">
         <thead>
             <tr>
@@ -51,8 +29,8 @@
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Prioridad_Fk)</th>
-                <th><span>Asignar Personal</span></th>
-                <th><span>Personal Asignado</span></th>
+                <th>Asignar Personal</th>
+                <th>Personal Asignado</th>
                 <th>Detalle/Estado</th>
             </tr>
         </thead>
@@ -64,45 +42,23 @@
 
             @foreach (var item in Model.PedidoTrabajo)
             {
-                if ((item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006) && (item.ID_Division_Fk == divisionUsuario || item.ID_Division_Fk == divisionUsuario2))
+                if ((item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006) &&
+                (item.ID_Division_Fk == divisionUsuario || item.ID_Division_Fk == divisionUsuario2))
                 {
                     <tr data-fecha="@item.Fecha_Subida?.ToString("yyyy-MM-dd") ?? " 0001-01-01"">
                         <td>@Html.DisplayFor(modelItem => item.ID_Orden_Fk)</td>
-                        <td>
-                            @if (item.Fecha_Subida.HasValue)
-                            {
-                                @item.Fecha_Subida.Value.ToString("dd-MM-yyyy")
-                            }
-                            else
-                            {
-                                @:01-01-0001
-                            }
-                        </td>
+                        <td>@item.Fecha_Subida?.ToString("dd-MM-yyyy")</td>
                         <td>@Html.DisplayFor(modelItem => item.Grado.Descripcion_Grado)</td>
                         <td>@Html.DisplayFor(modelItem => item.Apellido_Solicitante)</td>
                         <td>@Html.DisplayFor(modelItem => item.Organismo.Descripcion_organismo)</td>
                         <td>@Html.DisplayFor(modelItem => item.RTI_Solicitante)</td>
                         <td>@Html.DisplayFor(modelItem => item.Numero_Oficina_PT)</td>
                         <td>@Html.DisplayFor(modelItem => item.Correo)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Division.Descripcion_Division)</td><!-- Asegúrate de mostrar esta celda -->
-                        <td>
-                            @Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ?
-                                     item.Tarea.Descripcion_Tarea.Substring(0) :
-                                     item.Tarea.Descripcion_Tarea)
-                        </td>
+                        <td>@Html.DisplayFor(modelItem => item.Division.Descripcion_Division)</td>
+                        <td>@Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ? item.Tarea.Descripcion_Tarea : item.Tarea.Descripcion_Tarea)</td>
                         <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
                         <td>@Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)</td>
                         <td>@Html.DisplayFor(modelItem => item.Prioridad.Descripcion_Prioridad)</td>
-                        <!--<td data-orden-trabajo-id="@item.ID_Orden_Trabajo_Pk">
-                            <div class="form-group">
-                                <select asp-for="PT.ID_Prioridad_Fk"
-                                        asp-items="@(new SelectList(Model.Prioridad, "ID_Prioridad_Pk", "Descripcion_Prioridad"))"
-                                        class="PrioridadSelect formControl">
-                                    <option hidden selected value="">@item.Prioridad.Descripcion_Prioridad</option>
-                                </select>
-                                <span asp-validation-for="PT.ID_Prioridad_Fk" class="text-danger"></span>
-                            </div>
-                        </td>-->
                         <td>
                             <div class="form-group">
                                 <select id="usuarioSelect_@item.ID_Orden_Trabajo_Pk" class="formControl" data-division-id="@item.ID_Division_Fk">
@@ -116,31 +72,21 @@
                             </span>
                         </td>
                         <td>
-                            <a asp-page="./Details" class="btn-action" asp-route-id="@item.ID_Orden_Trabajo_Pk">Ir a Detalle</a>
+                            <a asp-page="./Details" class="" asp-route-id="@item.ID_Orden_Trabajo_Pk">Ir a Detalle</a>
                         </td>
                     </tr>
                 }
-
             }
         </tbody>
     </table>
-    <div class="pagination">
-        @if (Model.PedidoTrabajo.HasPreviousPage)
-        {
-            <a asp-page="./Index" asp-route-pageIndex="@(Model.PedidoTrabajo.PageIndex - 1)" class="pag">Anterior</a>
-        }
 
-        @for (int i = 1; i <= Model.PedidoTrabajo.TotalPages; i++)
-        {
-            <a asp-page="./Index" asp-route-pageIndex="@i" class="pag">@i</a>
-        }
-
-        @if (Model.PedidoTrabajo.HasNextPage)
-        {
-            <a asp-page="./Index" asp-route-pageIndex="@(Model.PedidoTrabajo.PageIndex + 1)" class="pag">Siguiente</a>
-        }
+    <div>
+        @Html.PagedListPager(Model.PedidoTrabajo, page => Url.Page("./IndexAdmin", new { pageNumber = page }), PagedListRenderOptions.Classic)
     </div>
 </body>
+
+<!-- Agregar el resto de los scripts como en tu archivo original -->
+
 
 <script>
     function formatDateInput(input) {
