--- a/PPTT/Pages/PT/postCreate.cshtml
+++ b/PPTT/Pages/PT/postCreate.cshtml
@@ -5,10 +5,10 @@
 <div class="post-create-div">
     <div class="card-post-create">
         <img src="~/imagenes/logoCG.png" alt="logogc" class="logo-post-create" />
-        <h1>PEDIDO DE TRABAJO REALIZADO</h1>
+        <h1>PEDIDO DE TRABAJO INICIADO</h1>
         <p class="message">Recibirá un correo electrónico con el número de pedido de trabajo.</p>
         <a asp-page="../index" class="btn-action">Volver al Inicio</a>
-        <a asp-page="./Create" class="btn-action">Relizar otro Pedido de Trabajo</a>
+        <a asp-page="./Create" class="btn-action">Realizar otro Pedido de Trabajo</a>
     </div>
 </div>
 
