--- a/PPTT/Pages/PT/Finalizados.cshtml
+++ b/PPTT/Pages/PT/Finalizados.cshtml
@@ -131,7 +131,7 @@
                             @Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)
                         </td>
                         <td>
-                            <a asp-page="./Details" class="btn-action" asp-route-id="@item.ID_Orden_Trabajo_Pk">Editar Estado</a>
+                            <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Editar Estado</a>
                         </td>
                     </tr>
                 }
