--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -12,6 +12,7 @@
     <table class="table" id="tabla">
         <thead>
             <tr>
+
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Orden_Fk)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Fecha_Subida)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Grado_Fk)</th>
@@ -25,7 +26,6 @@
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Prioridad_Fk)</th>
-                <th>Personal Asignado</th>
                 <th>Detalle/Estado</th>
             </tr>
         </thead>
@@ -46,7 +46,6 @@
                     <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
                     <td>@Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)</td>
                     <td>@Html.DisplayFor(modelItem => item.Prioridad.Descripcion_Prioridad)</td>
-                    <td>Personal asignado</td>
                     <td><a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Ir a Detalle</a></td>
                 </tr>
             }
@@ -58,7 +57,6 @@
         @Html.PagedListPager(Model.PedidoTrabajo, page => Url.Page("./Index", new { pageNumber = page }), PagedListRenderOptions.Classic)
     </div>
 </body>
-
 <script>
     function formatDateInput(input) {
         let value = input.value.replace(/[^0-9]/g, ''); // Eliminar caracteres no numéricos
@@ -225,6 +223,7 @@
             $('select[id^="usuarioSelect_"]').each(function () {
                 var usuarioSelect = $(this); 
                 var selectedDivision = usuarioSelect.data('division-id');
+            var idReal = usuarioSelect.closest('tr').find('td[data-id-orden-trabajo]').data('id-orden-trabajo');
                 var ordenTrabajoId = usuarioSelect.closest('tr').find('span[id^="personalAsignado_"]').data('orden-id');
                 var personalAsignado = $('#personalAsignado_' + ordenTrabajoId);
         
@@ -312,4 +311,9 @@
         filter: brightness(0) invert(1); /* Cambiar el color a blanco */       
         margin-left: 5px;
     }
+
+    .oculto {
+        display: none;
+    }
+
 </style>
