--- a/PPTT/Pages/PT/IndexAdmin.cshtml
+++ b/PPTT/Pages/PT/IndexAdmin.cshtml
@@ -29,6 +29,7 @@
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)</th>
                 <th>@Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Prioridad_Fk)</th>
+                <th>Personal Asignado</th>
                 <th>Detalle/Estado</th>
             </tr>
         </thead>
@@ -212,12 +213,9 @@
                         const newCell = document.createElement('td');
 
                         // Mostrar solo la opción seleccionada en "Prioridad"
-                        if (header.textContent.trim() === "Prioridad") {
-                            const selectedOption = cell.querySelector('select option:checked');
-                            newCell.textContent = selectedOption ? selectedOption.textContent : '';
-                        }
+
                         // Mostrar contenido de "Personal asignado"
-                        else if (header.textContent.trim() === "Personal asignado") {
+                        if (header.textContent.trim() === "Personal asignado") {
                             newCell.textContent = cell.textContent.trim();
                         } else {
                             newCell.textContent = cell.textContent;
