--- a/PPTT/Pages/Administradores/Details.cshtml
+++ b/PPTT/Pages/Administradores/Details.cshtml
@@ -144,7 +144,7 @@
         }
         else
         {
-            <a class="btn-action" asp-page="./IndexAdminU">Volver al Listado</a>
+            <a class="btn-action" asp-page="/Administradores/IndexAdminU">Volver al Listado</a>
         }
     </div>
         </div>
