--- a/PPTT/Pages/Vistas/IndexLogueado.cshtml
+++ b/PPTT/Pages/Vistas/IndexLogueado.cshtml
@@ -5,9 +5,9 @@
 }
 <body>    
     <div class="card-container">
-        <a asp-page="/PT/Index"> <div class="card">Lista Pedidos de Trabajo<img src="~/svgs/list.svg" alt="" class="icon-index-log" /></div></a>
-        <a asp-page="/Administradores/Index"><div class="card">Administración de Usuarios<img src="~/svgs/users.svg" alt="" class="icon-index-log" /></div></a>
-        <a asp-page="/Administradores/Create"><div class="card">Alta de Usuario<img src="~/svgs/user-plus.svg" alt="" class="icon-index-log" /></div></a>
+        <a asp-page="/PT/Index"> <div class="card"><img src="~/svgs/list.svg" alt="" class="icon-index-log" />Lista Pedidos de Trabajo</div></a>
+        <a asp-page="/Administradores/Index"><div class="card"><img src="~/svgs/users.svg" alt="" class="icon-index-log" />Administración de Usuarios</div></a>
+        <a asp-page="/Administradores/Create"><div class="card"><img src="~/svgs/user-plus.svg" alt="" class="icon-index-log" />Alta de Usuario</div></a>
     </div>
 </body>
 
