--- a/PPTT/Pages/PT/FinalizadosAdmin.cshtml
+++ b/PPTT/Pages/PT/FinalizadosAdmin.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
-@model PPTT.Pages.Administradores.IndexPPTT
-
+@model PPTT.Pages.Administradores.IndexAdminPTFin
+@using X.PagedList.Mvc.Core
+@using X.PagedList
 @{
-    ViewData["Title"] = "Pedidos de trabajo";
+    ViewData["Title"] = "Finalizados";
 }
 
 <body>
@@ -66,9 +67,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Correo)
             </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Division_Fk)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Division_Fk)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Tarea_Fk)
             </th>
@@ -84,16 +85,12 @@
         </tr>
     </thead>
     <tbody>
-            @{
-                var divisionUsuario = HttpContext.Session.GetInt32("Division");
-                var divisionUsuario2 = HttpContext.Session.GetInt32("Division2");
-
-            }
-
-            @foreach (var item in Model.PedidoTrabajo)
-            {
-                if ((item.ID_Estado_Fk == 1004 || item.ID_Estado_Fk == 1006) && (item.ID_Division_Fk == divisionUsuario || item.ID_Division_Fk == divisionUsuario2))
-                {
+        @{
+            var divisionUsuario = HttpContext.Session.GetInt32("Division");
+            var divisionUsuario2 = HttpContext.Session.GetInt32("Division2");
+        }
+        @foreach (var item in Model.PedidoTrabajo)
+        {            
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.ID_Orden_Fk)
@@ -127,8 +124,8 @@
                         </td>
                 <td>
                     @Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ?
-                             item.Tarea.Descripcion_Tarea.Substring(0) :
-                             item.Tarea.Descripcion_Tarea)
+                                item.Tarea.Descripcion_Tarea.Substring(0) :
+                                item.Tarea.Descripcion_Tarea)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Observacion)
@@ -139,11 +136,13 @@
                 <td>
                     <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Editar Estado</a>
                 </td>
-            </tr>}
+            </tr>           
         }
     </tbody>
 </table>
-
+    <div>
+        @Html.PagedListPager(Model.PedidoTrabajo, page => Url.Page("./FinalizadosAdmin", new { pageNumber = page }), PagedListRenderOptions.Classic)
+    </div>
 </body>
 <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
